// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component disabled Button 1`] = `
<div
  className="menu"
>
  <button
    className="button disabled"
    disabled={true}
    onClick={[Function]}
  >
    TEST
  </button>
</div>
`;

exports[`Button component disabledClassName prop 1`] = `
<button
  className="button DISABLED_CLASS"
  disabled={true}
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Button component recieves className 1`] = `
<div
  className="menu"
>
  <button
    className="button TEST_CLASS"
    disabled={false}
    onClick={[Function]}
  >
    TEST
  </button>
</div>
`;

exports[`Button component renders children 1`] = `
<div
  className="menu"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    TEST
  </button>
</div>
`;
